# cuborum

./: Cargo.toml  shell.nix
shaders/: compute_voxel.wgsl  fragment.wgsl  vertex.wgsl  voxel_fragment.wgsl  voxel_vertex.wgsl
src/: app.rs  main.rs
src/renderer/: camera.rs  mod.rs  pipeline.rs  pipeline_old.rs  state.rs  state_old.rs  vertex.rs  voxel.rs
src/renderer/pipeline/: common.rs  compute.rs  mod.rs  voxel.rs
src/renderer/state/: init.rs  input.rs  mod.rs  render.rs  update.rs
src/world/: voxel.rs  voxel_grid.rs
