[package]
name = "cuborum"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
pollster = "0.3"
thiserror = "2.0.12"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wgpu = "24.0.1"
winit = "0.30.9"
